kubernetes/apps/ghostfolio/ghostfolio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghostfolio
  namespace: ghostfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghostfolio
  template:
    metadata:
      labels:
        app: ghostfolio
    spec:
      containers:
        - name: ghostfolio
          image: ghostfolio/ghostfolio:latest
          ports:
            - containerPort: 3333
---
apiVersion: v1
kind: Service
metadata:
  name: ghostfolio
  namespace: ghostfolio
spec:
  selector:
    app: ghostfolio
  ports:
    - port: 3333
