kubernetes/apps/ghostfolio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghostfolio
  namespace: ghostfolio
  annotations:
    tailscale.com/funnel: "false"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghostfolio
                port:
                  number: 3333
  tls:
    - hosts:
        - ghostfolio
